--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "vercel"
   ],
   "author": "David Pérez Zapata",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "homepage": "https://github.com/sambanova/sambanova-ai-provider",
   "repository": {
     "type": "git",
