--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,9 @@
-name: Publish Release
+name: Publish release
 
 on:
-  workflow_dispatch:
-    inputs:
-      publish:
-        description: Publish new package version to npm registry
-        required: true
-        type: boolean
-        default: false
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
@@ -20,15 +16,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Common Node and pnpm setup
+      - name: Setup Node.js
         uses: ./.github/actions/common-setup
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-
-      - name: Config npm registry
-        run: pnpm config set registry https://registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
 
       - name: Create Release Pull Request or Publish
         id: changesets
@@ -37,4 +32,4 @@ jobs:
           publish: pnpm ci:release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
